--- a/myblog/posts/sr/studije/references.bib
+++ b/myblog/posts/sr/studije/references.bib
@@ -1,65 +1,33 @@
-
-@book{polya2015,
-	title = {How to Solve It: A New Aspect of Mathematical Method},
-	author = {Polya, G. and Conway, John H.},
-	year = {2015},
-	month = {09},
-	date = {2015-09-25},
-	publisher = {Princeton University Press},
-	address = {Princeton N.J.},
-	langid = {English}
-}
-
-@article{deSolve,
-	title = {Solving Differential Equations in {\textbraceleft}R{\textbraceright}: Package de{\textbraceleft}S{\textbraceright}olve},
-	author = {Karline Soetaert and , Thomas Petzoldt and , R. Woodrow Setzer},
-	year = {2010},
-	date = {2010},
-	volume = {33},
-	doi = {10.18637/jss.v033.i09}
-}
-
-@article{rstan,
-	title = {{\textbraceleft}RStan{\textbraceright}: the {\textbraceleft}R{\textbraceright} interface to {\textbraceleft}Stan{\textbraceright}},
-	author = {, Stan Development Team},
-	year = {2024},
-	date = {2024},
-	url = {https://mc-stan.org/}
-}
-
-@online{grubor2023,
+@online{gruborcausal2023,
   author = {N. Grubor, Nikola},
-  title = {Priče iza Podataka: Model za Otkrivanje Gravitacije},
-  date = {2023},
-  url = {https://nikola-grubor.github.io/myblog/posts/sr/gravitacija},
+  title = {Kauzalno zaključivanje je moguće iz opservacionih studija},
+  date = {2023-08-07},
+  url = {https://nikola-grubor.github.io/myblog/posts/sr/kauzalno-zakljucivanje},
   langid = {sr-Latn}
 }
 
-@article{chatzilena2019,
-  title = {Contemporary Statistical Inference for Infectious Disease Models Using {{Stan}}},
-  author = {Chatzilena, Anastasia and Van Leeuwen, Edwin and Ratmann, Oliver and Baguelin, Marc and Demiris, Nikolaos},
-  date = {2019-12},
-  journaltitle = {Epidemics},
-  shortjournal = {Epidemics},
-  volume = {29},
-  pages = {100367},
-  issn = {17554365},
-  doi = {10.1016/j.epidem.2019.100367},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S1755436519300325},
-  urldate = {2024-04-08},
-  langid = {english},
-  file = {/Users/nickg/Zotero/storage/NNCKR6YY/Chatzilena et al. - 2019 - Contemporary statistical inference for infectious .pdf;/Users/nickg/Zotero/storage/UKFWL82P/chatzilena2019.pdf.pdf}
+@book{pearlCausalInferenceStatistics2016a,
+  title = {Causal {{Inference}} in {{Statistics}} - {{A Primer}}},
+  author = {Pearl, Judea and Glymour, Madelyn and Jewell, Nicholas P.},
+  year = {2016},
+  month = feb,
+  edition = {1st edition},
+  publisher = {Wiley},
+  address = {Chichester},
+  isbn = {978-1-119-18684-7},
+  langid = {english}
 }
 
-@online{mihaljevic2016,
-  title = {Estimating Transmission by Fitting Mechanistic Models in {{Stan}}},
-  author = {Mihaljevic, Joseph},
-  date = {2016-10-27T00:00:00+00:00},
-  url = {https://jrmihalj.github.io/estimating-transmission-by-fitting-mechanistic-models-in-Stan/},
-  urldate = {2024-04-08},
-  abstract = {Mechanistic disease models are at the heart of disease ecology and have generated fundamental biological insights, ranging from our understanding of disease-density thresholds to the influence of host heterogeneity on the spread of disease. The definition of a mechanistic model is actually debated quite a lot, but here I am referring specifically to systems of ordinary differential equations (ODEs) that can capture the important non-linearities and temporal dynamics of infection, which are founded on the idea of transmission from infectious hosts to susceptible hosts. This is probably the simplest example:},
-  langid = {english},
-  organization = {Disease Ecology and Evolution},
-  file = {/Users/nickg/Zotero/storage/6HUE6WAD/estimating-transmission-by-fitting-mechanistic-models-in-Stan.html}
+@book{ClinicalResearch2013a,
+  title = {Designing {{Clinical Research}}},
+  author = {Stephen B. Hulley, Steven R. Cummings, Warren S. Browner MD, Deborah G. Grady, Thomas B. Newman},
+  year = {2013},
+  month = jul,
+  edition = {Fourth edition},
+  publisher = {LWW},
+  address = {Philadelphia},
+  isbn = {978-1-60831-804-9},
+  langid = {english}
 }
+
 
